<resources>
    <string name="app_name">Popcorn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_description">This is a news discriptions.</string>
    <string name="more">More</string>
    <string name="published_at">Published at</string>
    <string name="news_title">News Title</string>
    <string name="news_author">News Author</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="news_feed">News Feed</string>
    <string name="movie_title">Movie Title</string>
    <string name="vote_count">Vote Count</string>
    <string name="movie_description">Movie description</string>
</resources>
