<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_lock_idle_lock"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_title"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/news_image"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/news_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_author"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/news_title"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/published_at"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/news_author"
                app:layout_constraintTop_toBottomOf="@+id/news_title" />

            <TextView
                android:id="@+id/news_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_description"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_author" />

            <TextView
                android:id="@+id/news_content_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="0dp"
                android:text="@string/more"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>