<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
            android:src="@android:drawable/ic_dialog_alert"
            android:id="@+id/movie_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            app:layout_constraintLeft_toRightOf="@+id/movie_image"
            app:layout_constraintTop_toTopOf="@+id/movie_image"
            />

        <TextView
            android:id="@+id/movie_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            android:text="@string/vote_count"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            app:layout_constraintLeft_toRightOf="@+id/movie_image" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_description"
            android:paddingStart="30dp"
            android:maxLines="2"
            android:paddingEnd="0dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_vote_count"
            app:layout_constraintLeft_toRightOf="@+id/movie_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>